Update Segmenting and Clustering Neighborhoods in Toronto.ipynb

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -85,24 +85,24 @@
      "data": {
       "text/plain": [
        "     PostalCode                            Borough          Neighborhood\n",
-       "124           1             West Humber-Clairville                      \n",
-       "82            2  Mount Olive-Silverstone-Jamestown            Smithfield\n",
-       "117           3       Thistletown-Beaumond Heights                      \n",
-       "102           4                    Rexdale-Kipling               Rexdale\n",
-       "39            5                   Elms-Old Rexdale  The Elms and Rexdale\n",
+       "0             1             West Humber-Clairville                      \n",
+       "1             2  Mount Olive-Silverstone-Jamestown            Smithfield\n",
+       "2             3       Thistletown-Beaumond Heights                      \n",
+       "3             4                    Rexdale-Kipling               Rexdale\n",
+       "4             5                   Elms-Old Rexdale  The Elms and Rexdale\n",
        "..          ...                                ...                   ...\n",
-       "123         136                          West Hill                      \n",
-       "132         137                             Woburn                      \n",
-       "38          138                      Eglinton East         Eglinton East\n",
-       "109         139                Scarborough Village                      \n",
-       "48          140                          Guildwood             Guildwood\n",
+       "135         136                          West Hill                      \n",
+       "136         137                             Woburn                      \n",
+       "137         138                      Eglinton East         Eglinton East\n",
+       "138         139                Scarborough Village                      \n",
+       "139         140                          Guildwood             Guildwood\n",
        "\n",
        "[140 rows x 3 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>124</th>\n      <td>1</td>\n      <td>West Humber-Clairville</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>82</th>\n      <td>2</td>\n      <td>Mount Olive-Silverstone-Jamestown</td>\n      <td>Smithfield</td>\n    </tr>\n    <tr>\n      <th>117</th>\n      <td>3</td>\n      <td>Thistletown-Beaumond Heights</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>102</th>\n      <td>4</td>\n      <td>Rexdale-Kipling</td>\n      <td>Rexdale</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>5</td>\n      <td>Elms-Old Rexdale</td>\n      <td>The Elms and Rexdale</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>123</th>\n      <td>136</td>\n      <td>West Hill</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>132</th>\n      <td>137</td>\n      <td>Woburn</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>138</td>\n      <td>Eglinton East</td>\n      <td>Eglinton East</td>\n    </tr>\n    <tr>\n      <th>109</th>\n      <td>139</td>\n      <td>Scarborough Village</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>140</td>\n      <td>Guildwood</td>\n      <td>Guildwood</td>\n    </tr>\n  </tbody>\n</table>\n<p>140 rows × 3 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>West Humber-Clairville</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Mount Olive-Silverstone-Jamestown</td>\n      <td>Smithfield</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Thistletown-Beaumond Heights</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Rexdale-Kipling</td>\n      <td>Rexdale</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Elms-Old Rexdale</td>\n      <td>The Elms and Rexdale</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>135</th>\n      <td>136</td>\n      <td>West Hill</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>136</th>\n      <td>137</td>\n      <td>Woburn</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>137</th>\n      <td>138</td>\n      <td>Eglinton East</td>\n      <td>Eglinton East</td>\n    </tr>\n    <tr>\n      <th>138</th>\n      <td>139</td>\n      <td>Scarborough Village</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>139</th>\n      <td>140</td>\n      <td>Guildwood</td>\n      <td>Guildwood</td>\n    </tr>\n  </tbody>\n</table>\n<p>140 rows × 3 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 26
     }
    ],
    "source": [
@@ -116,7 +116,7 @@
     "        Toronto_neighborhoods = Toronto_neighborhoods.append({\"PostalCode\":postcode, \"Borough\":borough, \"Neighborhood\":neighborhood}, ignore_index=True)\n",
     "Toronto_neighborhoods['PostalCode']=pd.to_numeric(Toronto_neighborhoods['PostalCode'])\n",
     "Toronto_neighborhoods.sort_values('PostalCode',inplace=True)\n",
-    "Toronto_neighborhoods"
+    "Toronto_neighborhoods.reset_index(drop=True)"
    ]
   },
   {
