join the latitude and logitude

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -151,6 +151,83 @@
    ]
   },
   {
+   "source": [
+    "## Get the latitudes and logitudes to append to the dataframe"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting geocoder\n",
+      "  Downloading geocoder-1.38.1-py2.py3-none-any.whl (98 kB)\n",
+      "Requirement already satisfied: requests in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (2.25.1)\n",
+      "Collecting ratelim\n",
+      "  Downloading ratelim-0.1.6-py2.py3-none-any.whl (4.0 kB)\n",
+      "Requirement already satisfied: six in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (1.15.0)\n",
+      "Requirement already satisfied: click in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (7.1.2)\n",
+      "Requirement already satisfied: future in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (0.18.2)\n",
+      "Requirement already satisfied: decorator in c:\\users\\david\\appdata\\roaming\\python\\python39\\site-packages (from ratelim->geocoder) (5.0.7)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (1.26.4)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (4.0.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (2020.12.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (2.10)\n",
+      "Installing collected packages: ratelim, geocoder\n",
+      "Successfully installed geocoder-1.38.1 ratelim-0.1.6\n",
+      "WARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
+      "distutils: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\\UNKNOWN\n",
+      "sysconfig: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\n",
+      "WARNING: Additional context:\n",
+      "user = False\n",
+      "home = None\n",
+      "root = None\n",
+      "prefix = None\n",
+      "WARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
+      "distutils: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\\UNKNOWN\n",
+      "sysconfig: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\n",
+      "WARNING: Additional context:\n",
+      "user = False\n",
+      "home = None\n",
+      "root = None\n",
+      "prefix = None\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'postal_code' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-de4a40baee6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# loop until you get the coordinates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mwhile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlat_lng_coords\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m   \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgeocoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgoogle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{}, Toronto, Ontario'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpostal_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m   \u001b[0mlat_lng_coords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlatlng\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'postal_code' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install geocoder\n",
+    "import geocoder # import geocoder\n",
+    "\n",
+    "# initialize your variable to None\n",
+    "lat_lng_coords = None\n",
+    "\n",
+    "# loop until you get the coordinates\n",
+    "while(lat_lng_coords is None):\n",
+    "  g = geocoder.google('{}, Toronto, Ontario'.format(postal_code))\n",
+    "  lat_lng_coords = g.latlng\n",
+    "\n",
+    "latitude = lat_lng_coords[0]\n",
+    "longitude = lat_lng_coords[1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
