--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>M3A</td>\n      <td>North York</td>\n      <td>Parkwoods</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Manor, Lawrence Heights</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M7A</td>\n      <td>Queen's Park</td>\n      <td>Ontario Provincial Government</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 3
     }
    ],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 4
     }
    ],
    "source": [
@@ -159,72 +159,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Collecting geocoder\n",
-      "  Downloading geocoder-1.38.1-py2.py3-none-any.whl (98 kB)\n",
-      "Requirement already satisfied: requests in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (2.25.1)\n",
-      "Collecting ratelim\n",
-      "  Downloading ratelim-0.1.6-py2.py3-none-any.whl (4.0 kB)\n",
-      "Requirement already satisfied: six in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (1.15.0)\n",
-      "Requirement already satisfied: click in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (7.1.2)\n",
-      "Requirement already satisfied: future in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from geocoder) (0.18.2)\n",
-      "Requirement already satisfied: decorator in c:\\users\\david\\appdata\\roaming\\python\\python39\\site-packages (from ratelim->geocoder) (5.0.7)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (1.26.4)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (4.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (2020.12.5)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\david\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests->geocoder) (2.10)\n",
-      "Installing collected packages: ratelim, geocoder\n",
-      "Successfully installed geocoder-1.38.1 ratelim-0.1.6\n",
-      "WARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
-      "distutils: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\\UNKNOWN\n",
-      "sysconfig: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\n",
-      "WARNING: Additional context:\n",
-      "user = False\n",
-      "home = None\n",
-      "root = None\n",
-      "prefix = None\n",
-      "WARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
-      "distutils: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\\UNKNOWN\n",
-      "sysconfig: c:\\users\\david\\appdata\\local\\programs\\python\\python39\\Include\n",
-      "WARNING: Additional context:\n",
-      "user = False\n",
-      "home = None\n",
-      "root = None\n",
-      "prefix = None\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'postal_code' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-de4a40baee6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# loop until you get the coordinates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mwhile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlat_lng_coords\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m   \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgeocoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgoogle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{}, Toronto, Ontario'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpostal_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m   \u001b[0mlat_lng_coords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlatlng\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'postal_code' is not defined"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                          Borough  \\\n",
+       "PostalCode                          \n",
+       "M3A                    North York   \n",
+       "M4A                    North York   \n",
+       "M5A              Downtown Toronto   \n",
+       "M6A                    North York   \n",
+       "M7A                  Queen's Park   \n",
+       "...                           ...   \n",
+       "M8X                     Etobicoke   \n",
+       "M4Y              Downtown Toronto   \n",
+       "M7Y         East Toronto Business   \n",
+       "M8Y                     Etobicoke   \n",
+       "M8Z                     Etobicoke   \n",
+       "\n",
+       "                                                 Neighborhood   Latitude  \\\n",
+       "PostalCode                                                                 \n",
+       "M3A                                                 Parkwoods  43.753259   \n",
+       "M4A                                          Victoria Village  43.725882   \n",
+       "M5A                                 Regent Park, Harbourfront  43.654260   \n",
+       "M6A                          Lawrence Manor, Lawrence Heights  43.718518   \n",
+       "M7A                             Ontario Provincial Government  43.662301   \n",
+       "...                                                       ...        ...   \n",
+       "M8X             The Kingsway, Montgomery Road, Old Mill North  43.653654   \n",
+       "M4Y                                      Church and Wellesley  43.665860   \n",
+       "M7Y                                            Enclave of M4L  43.662744   \n",
+       "M8Y         Old Mill South, King's Mill Park, Sunnylea, Hu...  43.636258   \n",
+       "M8Z         Mimico NW, The Queensway West, South of Bloor,...  43.628841   \n",
+       "\n",
+       "            Longitude  \n",
+       "PostalCode             \n",
+       "M3A        -79.329656  \n",
+       "M4A        -79.315572  \n",
+       "M5A        -79.360636  \n",
+       "M6A        -79.464763  \n",
+       "M7A        -79.389494  \n",
+       "...               ...  \n",
+       "M8X        -79.506944  \n",
+       "M4Y        -79.383160  \n",
+       "M7Y        -79.321558  \n",
+       "M8Y        -79.498509  \n",
+       "M8Z        -79.520999  \n",
+       "\n",
+       "[103 rows x 4 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n    </tr>\n    <tr>\n      <th>PostalCode</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>M3A</th>\n      <td>North York</td>\n      <td>Parkwoods</td>\n      <td>43.753259</td>\n      <td>-79.329656</td>\n    </tr>\n    <tr>\n      <th>M4A</th>\n      <td>North York</td>\n      <td>Victoria Village</td>\n      <td>43.725882</td>\n      <td>-79.315572</td>\n    </tr>\n    <tr>\n      <th>M5A</th>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n      <td>43.654260</td>\n      <td>-79.360636</td>\n    </tr>\n    <tr>\n      <th>M6A</th>\n      <td>North York</td>\n      <td>Lawrence Manor, Lawrence Heights</td>\n      <td>43.718518</td>\n      <td>-79.464763</td>\n    </tr>\n    <tr>\n      <th>M7A</th>\n      <td>Queen's Park</td>\n      <td>Ontario Provincial Government</td>\n      <td>43.662301</td>\n      <td>-79.389494</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>M8X</th>\n      <td>Etobicoke</td>\n      <td>The Kingsway, Montgomery Road, Old Mill North</td>\n      <td>43.653654</td>\n      <td>-79.506944</td>\n    </tr>\n    <tr>\n      <th>M4Y</th>\n      <td>Downtown Toronto</td>\n      <td>Church and Wellesley</td>\n      <td>43.665860</td>\n      <td>-79.383160</td>\n    </tr>\n    <tr>\n      <th>M7Y</th>\n      <td>East Toronto Business</td>\n      <td>Enclave of M4L</td>\n      <td>43.662744</td>\n      <td>-79.321558</td>\n    </tr>\n    <tr>\n      <th>M8Y</th>\n      <td>Etobicoke</td>\n      <td>Old Mill South, King's Mill Park, Sunnylea, Hu...</td>\n      <td>43.636258</td>\n      <td>-79.498509</td>\n    </tr>\n    <tr>\n      <th>M8Z</th>\n      <td>Etobicoke</td>\n      <td>Mimico NW, The Queensway West, South of Bloor,...</td>\n      <td>43.628841</td>\n      <td>-79.520999</td>\n    </tr>\n  </tbody>\n</table>\n<p>103 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 5
     }
    ],
    "source": [
-    "# !pip install geocoder\n",
-    "import geocoder # import geocoder\n",
-    "\n",
-    "# initialize your variable to None\n",
-    "lat_lng_coords = None\n",
-    "\n",
-    "# loop until you get the coordinates\n",
-    "while(lat_lng_coords is None):\n",
-    "  g = geocoder.google('{}, Toronto, Ontario'.format(postal_code))\n",
-    "  lat_lng_coords = g.latlng\n",
-    "\n",
-    "latitude = lat_lng_coords[0]\n",
-    "longitude = lat_lng_coords[1]"
+    "import csv\n",
+    "ll=pd.read_csv('Geospatial_Coordinates.csv')\n",
+    "df.set_index('PostalCode').join(ll.set_index('Postal Code'))"
    ]
   },
   {
