Update Segmenting and Clustering Neighborhoods in Toronto.ipynb

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "source": [
-    "### Answer for assignment 1: the shape of the dataframe"
+    "# Answer for assignment 1: the shape of the dataframe"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -171,7 +171,7 @@
   },
   {
    "source": [
-    "### Answer for assignment 2: Append the latitudes and longitudes to the original dataframe"
+    "# Answer for assignment 2: Append the latitudes and longitudes to the original dataframe"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1722,6 +1722,13 @@
     "longitude = location.longitude\n",
     "print('The geograpical coordinate of Toronto are {}, {}.'.format(latitude, longitude))"
    ]
+  },
+  {
+   "source": [
+    "# Answer for assignment 3: visualize the neighborhoods in clusters"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
