Update Final project - Find a new living area.ipynb

--- a/Final project - Find a new living area.ipynb
+++ b/Final project - Find a new living area.ipynb
@@ -20,7 +20,7 @@
   {
    "source": [
     "# Final Project of Applied Data Science Capstone\n",
-    "# - Find a new living area in Vancouver"
+    "# - Find a new living area in Toronto"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -28,7 +28,7 @@
   {
    "source": [
     "## 1. Introduction\n",
-    "As a real estate agent, we have a new client, David, who just got a new job in Vancouver and will have to move there within 2 months. Therefore, he contracted us with this taks to find an ideal place and an apartment for him.\n",
+    "As a real estate agent, we have a new client, David, who just got a new job in Toronto and will have to move there within 2 months. Therefore, he contracted us with this taks to find an ideal place and an apartment for him.\n",
     "\n",
     "David is a software engineer. He works mostly from home and only needs to go to the office for meetings sometimes. Therefore, the distance between his home and office is not a problem. What really matters is the the quality of life he will have in the new neighborhood. \n",
     "\n",
@@ -41,7 +41,7 @@
   {
    "source": [
     "## 2. Data for this project\n",
-    "To help David find the ideal place to live, we will need the facilities data from Vancouver, which we will get via Foursquare. After retrieving the data, we will perform a clustering process to filter the top 3 areas for David to choose and that will be the end results of this project."
+    "To help David find the ideal place to live, we will need the facilities data from Toronto, which we will get via Foursquare. After retrieving the data, we will perform a clustering process to filter the top 3 areas for David to choose and that will be the end results of this project."
    ],
    "cell_type": "markdown",
    "metadata": {}
