Update Final project - Find a new living area.ipynb

--- a/Final project - Find a new living area.ipynb
+++ b/Final project - Find a new living area.ipynb
@@ -915,113 +915,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   PostalCode           Borough  \\\n",
-       "1         M4A        North York   \n",
-       "2         M5A  Downtown Toronto   \n",
-       "13        M3C        North York   \n",
-       "15        M5C  Downtown Toronto   \n",
-       "23        M4G         East York   \n",
-       "27        M2H        North York   \n",
-       "28        M3H        North York   \n",
-       "29        M4H         East York   \n",
-       "36        M5J  Downtown Toronto   \n",
-       "37        M6J      West Toronto   \n",
-       "42        M5K  Downtown Toronto   \n",
-       "48        M5L  Downtown Toronto   \n",
-       "56        M6M              York   \n",
-       "70        M9P         Etobicoke   \n",
-       "79        M4S   Central Toronto   \n",
-       "90        M1W       Scarborough   \n",
-       "93        M8W         Etobicoke   \n",
-       "97        M5X  Downtown Toronto   \n",
+       "   PostalCode           Borough                            Neighborhood  \\\n",
+       "97        M5X  Downtown Toronto  First Canadian Place, Underground city   \n",
        "\n",
-       "                                         Neighborhood   Latitude  Longitude  \\\n",
-       "1                                    Victoria Village  43.725882 -79.315572   \n",
-       "2                           Regent Park, Harbourfront  43.654260 -79.360636   \n",
-       "13                                    Don Mills South  43.725900 -79.340923   \n",
-       "15                                     St. James Town  43.651494 -79.375418   \n",
-       "23                                            Leaside  43.709060 -79.363452   \n",
-       "27                                  Hillcrest Village  43.803762 -79.363452   \n",
-       "28    Bathurst Manor, Wilson Heights, Downsview North  43.754328 -79.442259   \n",
-       "29                                   Thorncliffe Park  43.705369 -79.349372   \n",
-       "36  Harbourfront East, Union Station, Toronto Islands  43.640816 -79.381752   \n",
-       "37                           Little Portugal, Trinity  43.647927 -79.419750   \n",
-       "42           Toronto Dominion Centre, Design Exchange  43.647177 -79.381576   \n",
-       "48                     Commerce Court, Victoria Hotel  43.648198 -79.379817   \n",
-       "56   Del Ray, Mount Dennis, Keelsdale and Silverthorn  43.691116 -79.476013   \n",
-       "70                                          Westmount  43.696319 -79.532242   \n",
-       "79                                         Davisville  43.704324 -79.388790   \n",
-       "90                      Steeles West, L'Amoreaux West  43.799525 -79.318389   \n",
-       "93                             Alderwood, Long Branch  43.602414 -79.543484   \n",
-       "97             First Canadian Place, Underground city  43.648429 -79.382280   \n",
+       "     Latitude  Longitude  Cluster Labels 1st Most Common Venue  \\\n",
+       "97  43.648429  -79.38228               1       All restaurants   \n",
        "\n",
-       "    Cluster Labels 1st Most Common Venue   2nd Most Common Venue  \\\n",
-       "1                1       All restaurants            Intersection   \n",
-       "2                1       All restaurants  Furniture / Home Store   \n",
-       "13               1       All restaurants              All sports   \n",
-       "15               1       All restaurants               Gastropub   \n",
-       "23               1       All restaurants                All bars   \n",
-       "27               1       All restaurants             Golf Course   \n",
-       "28               1       All restaurants           Deli / Bodega   \n",
-       "29               1       All restaurants             Supermarket   \n",
-       "36               1       All restaurants              All coffee   \n",
-       "37               1       All restaurants                All bars   \n",
-       "42               1       All restaurants              All coffee   \n",
-       "48               1       All restaurants              All coffee   \n",
-       "56               1       All restaurants          Discount Store   \n",
-       "70               1       All restaurants              All coffee   \n",
-       "79               1       All restaurants              All coffee   \n",
-       "90               1       All restaurants                Pharmacy   \n",
-       "93               1       All restaurants              All coffee   \n",
-       "97               1       All restaurants              All coffee   \n",
+       "   2nd Most Common Venue 3rd Most Common Venue 4th Most Common Venue  \\\n",
+       "97            All coffee            All sports         Deli / Bodega   \n",
        "\n",
-       "   3rd Most Common Venue 4th Most Common Venue 5th Most Common Venue  \n",
-       "1          Grocery Store    Light Rail Station       Organic Grocery  \n",
-       "2             All sports             Gastropub                   Spa  \n",
-       "13        Discount Store             Bike Shop         Grocery Store  \n",
-       "15            All coffee              Creperie                Lawyer  \n",
-       "23     Electronics Store                  Bank            All sports  \n",
-       "27                 Trail      Toy / Game Store           Opera House  \n",
-       "28         Grocery Store            All coffee                 Trail  \n",
-       "29            All sports           Gas Station   Housing Development  \n",
-       "36              All bars                  Bank            All sports  \n",
-       "37              Boutique            All coffee            All sports  \n",
-       "42              All bars         Deli / Bodega            All sports  \n",
-       "48         Deli / Bodega                 Hotel              All bars  \n",
-       "56            All coffee     Convenience Store           Opera House  \n",
-       "70                Lawyer       Organic Grocery           Opera House  \n",
-       "79          Dessert Shop              All bars      Toy / Game Store  \n",
-       "90        Discount Store     Electronics Store                  Bank  \n",
-       "93              Pharmacy                Lawyer       Organic Grocery  \n",
-       "97            All sports         Deli / Bodega              All bars  "
+       "   5th Most Common Venue  \n",
+       "97              All bars  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n      <th>Cluster Labels</th>\n      <th>1st Most Common Venue</th>\n      <th>2nd Most Common Venue</th>\n      <th>3rd Most Common Venue</th>\n      <th>4th Most Common Venue</th>\n      <th>5th Most Common Venue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n      <td>43.725882</td>\n      <td>-79.315572</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Intersection</td>\n      <td>Grocery Store</td>\n      <td>Light Rail Station</td>\n      <td>Organic Grocery</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n      <td>43.654260</td>\n      <td>-79.360636</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Furniture / Home Store</td>\n      <td>All sports</td>\n      <td>Gastropub</td>\n      <td>Spa</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>M3C</td>\n      <td>North York</td>\n      <td>Don Mills South</td>\n      <td>43.725900</td>\n      <td>-79.340923</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All sports</td>\n      <td>Discount Store</td>\n      <td>Bike Shop</td>\n      <td>Grocery Store</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>M5C</td>\n      <td>Downtown Toronto</td>\n      <td>St. James Town</td>\n      <td>43.651494</td>\n      <td>-79.375418</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Gastropub</td>\n      <td>All coffee</td>\n      <td>Creperie</td>\n      <td>Lawyer</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>M4G</td>\n      <td>East York</td>\n      <td>Leaside</td>\n      <td>43.709060</td>\n      <td>-79.363452</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All bars</td>\n      <td>Electronics Store</td>\n      <td>Bank</td>\n      <td>All sports</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>M2H</td>\n      <td>North York</td>\n      <td>Hillcrest Village</td>\n      <td>43.803762</td>\n      <td>-79.363452</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Golf Course</td>\n      <td>Trail</td>\n      <td>Toy / Game Store</td>\n      <td>Opera House</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>M3H</td>\n      <td>North York</td>\n      <td>Bathurst Manor, Wilson Heights, Downsview North</td>\n      <td>43.754328</td>\n      <td>-79.442259</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Deli / Bodega</td>\n      <td>Grocery Store</td>\n      <td>All coffee</td>\n      <td>Trail</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>M4H</td>\n      <td>East York</td>\n      <td>Thorncliffe Park</td>\n      <td>43.705369</td>\n      <td>-79.349372</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Supermarket</td>\n      <td>All sports</td>\n      <td>Gas Station</td>\n      <td>Housing Development</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>M5J</td>\n      <td>Downtown Toronto</td>\n      <td>Harbourfront East, Union Station, Toronto Islands</td>\n      <td>43.640816</td>\n      <td>-79.381752</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>All bars</td>\n      <td>Bank</td>\n      <td>All sports</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>M6J</td>\n      <td>West Toronto</td>\n      <td>Little Portugal, Trinity</td>\n      <td>43.647927</td>\n      <td>-79.419750</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All bars</td>\n      <td>Boutique</td>\n      <td>All coffee</td>\n      <td>All sports</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>M5K</td>\n      <td>Downtown Toronto</td>\n      <td>Toronto Dominion Centre, Design Exchange</td>\n      <td>43.647177</td>\n      <td>-79.381576</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>All bars</td>\n      <td>Deli / Bodega</td>\n      <td>All sports</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>M5L</td>\n      <td>Downtown Toronto</td>\n      <td>Commerce Court, Victoria Hotel</td>\n      <td>43.648198</td>\n      <td>-79.379817</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>Deli / Bodega</td>\n      <td>Hotel</td>\n      <td>All bars</td>\n    </tr>\n    <tr>\n      <th>56</th>\n      <td>M6M</td>\n      <td>York</td>\n      <td>Del Ray, Mount Dennis, Keelsdale and Silverthorn</td>\n      <td>43.691116</td>\n      <td>-79.476013</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Discount Store</td>\n      <td>All coffee</td>\n      <td>Convenience Store</td>\n      <td>Opera House</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>M9P</td>\n      <td>Etobicoke</td>\n      <td>Westmount</td>\n      <td>43.696319</td>\n      <td>-79.532242</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>Lawyer</td>\n      <td>Organic Grocery</td>\n      <td>Opera House</td>\n    </tr>\n    <tr>\n      <th>79</th>\n      <td>M4S</td>\n      <td>Central Toronto</td>\n      <td>Davisville</td>\n      <td>43.704324</td>\n      <td>-79.388790</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>Dessert Shop</td>\n      <td>All bars</td>\n      <td>Toy / Game Store</td>\n    </tr>\n    <tr>\n      <th>90</th>\n      <td>M1W</td>\n      <td>Scarborough</td>\n      <td>Steeles West, L'Amoreaux West</td>\n      <td>43.799525</td>\n      <td>-79.318389</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>Pharmacy</td>\n      <td>Discount Store</td>\n      <td>Electronics Store</td>\n      <td>Bank</td>\n    </tr>\n    <tr>\n      <th>93</th>\n      <td>M8W</td>\n      <td>Etobicoke</td>\n      <td>Alderwood, Long Branch</td>\n      <td>43.602414</td>\n      <td>-79.543484</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>Pharmacy</td>\n      <td>Lawyer</td>\n      <td>Organic Grocery</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>M5X</td>\n      <td>Downtown Toronto</td>\n      <td>First Canadian Place, Underground city</td>\n      <td>43.648429</td>\n      <td>-79.382280</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>All sports</td>\n      <td>Deli / Bodega</td>\n      <td>All bars</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n      <th>Cluster Labels</th>\n      <th>1st Most Common Venue</th>\n      <th>2nd Most Common Venue</th>\n      <th>3rd Most Common Venue</th>\n      <th>4th Most Common Venue</th>\n      <th>5th Most Common Venue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>97</th>\n      <td>M5X</td>\n      <td>Downtown Toronto</td>\n      <td>First Canadian Place, Underground city</td>\n      <td>43.648429</td>\n      <td>-79.38228</td>\n      <td>1</td>\n      <td>All restaurants</td>\n      <td>All coffee</td>\n      <td>All sports</td>\n      <td>Deli / Bodega</td>\n      <td>All bars</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 385
+     "execution_count": 399
     }
    ],
    "source": [
+    "# Focus on the areas that are tagged as cluster 1\n",
     "i= toronto_merged[toronto_merged['Cluster Labels']!=1].index\n",
     "top_area=toronto_merged.drop(i,axis=0)\n",
     "\n",
+    "# Remove the areas that don't have the category \"All restaurants\" at the 1st most common venue\n",
     "i= top_area[top_area['1st Most Common Venue']!='All restaurants'].index\n",
     "top_area=top_area.drop(i,axis=0)\n",
     "\n",
+    "# Remove the areas that have the category \"All allergies\"\n",
     "mask= top_area[top_area=='All allergies']\n",
     "mask=mask.replace(np.nan,True).replace('All allergies',np.nan)\n",
     "top_area=top_area[mask].dropna(axis=0)\n",
     "\n",
-    "i= top_area[((top_area['2nd Most Common Venue']=='All coffee') & (top_area['3rd Most Common Venue']=='All sports')) | ((top_area['2nd Most Common Venue']=='All sports') & (top_area['3rd Most Common Venue']=='All coffee'))].index\n",
-    "# top_area=top_area.drop(i,axis=0)\n",
-    "top_area[i]"
+    "# Remove the areas that don't have the category \"All coffee\" and \"All sports\" at either 2nd or 3rd most common venue\n",
+    "top_area=top_area[(top_area['2nd Most Common Venue']=='All coffee') | (top_area['3rd Most Common Venue']=='All coffee')]\n",
+    "top_area=top_area[(top_area['2nd Most Common Venue']=='All sports') | (top_area['3rd Most Common Venue']=='All sports')]\n",
+    "top_area"
    ]
   },
   {
