Update Final project - Find a new living area.ipynb

--- a/Final project - Find a new living area.ipynb
+++ b/Final project - Find a new living area.ipynb
@@ -894,14 +894,14 @@
   },
   {
    "source": [
-    "### 3.4 Find the top 3 areas that match the customer's needs"
+    "## 4 Results"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "#### 3.4.1 Find the best combination\n",
+    "### 4.1 Find the top 3 areas that match the customer's needs\n",
     "Based on David's requirement, the category \"All restaurants\" must be the first one, and \"All coffee\" and \"All sports\" must be either 2nd and 3rd places (the order doesn't matter).\n",
     "\n",
     "Most important thing is, the category \"All allergies\" must not appear in the top 5 list for his own good.\n",
@@ -961,11 +961,66 @@
    ]
   },
   {
+   "source": [
+    "### 4.2 Find the most suitable areas for David"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "97    First Canadian Place, Underground city\nName: Neighborhood, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(top_area['Neighborhood'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create map\n",
+    "map_clusters = folium.Map(location=[latitude, longitude], zoom_start=11)\n",
+    "\n",
+    "# set color scheme for the clusters\n",
+    "x = np.arange(kclusters)\n",
+    "ys = [i + x + (i*x)**2 for i in range(kclusters)]\n",
+    "colors_array = cm.rainbow(np.linspace(0, 1, len(ys)))\n",
+    "rainbow = [colors.rgb2hex(i) for i in colors_array]\n",
+    "\n",
+    "# add markers to the map\n",
+    "markers_colors = []\n",
+    "for lat, lon, poi, cluster in zip(top_area['Latitude'], top_area['Longitude'], top_area['Neighborhood'], top_area['Cluster Labels']):\n",
+    "    label = folium.Popup(str(poi) + ' Cluster ' + str(cluster), parse_html=True)\n",
+    "    folium.CircleMarker(\n",
+    "        [lat, lon],\n",
+    "        radius=5,\n",
+    "        popup=label,\n",
+    "        color='red',\n",
+    "        fill=True,\n",
+    "        # fill_color=rainbow[cluster-1],\n",
+    "        fill_opacity=0.7).add_to(map_clusters)\n",
+    "       \n",
+    "map_clusters"
+   ]
+  },
+  {
+   "source": [
+    "## 4. Results"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
