Update Final project - Find a new living area.ipynb

--- a/Final project - Find a new living area.ipynb
+++ b/Final project - Find a new living area.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "David is a software engineer. He works mostly from home and only needs to go to the office for meetings sometimes. Therefore, the distance between his home and office is not a problem. What really matters is the quality of life he will have in the new neighborhood. \n",
     "\n",
-    "David doesn't like to cook because he hates the cooking smell inside the house, so the most important thing for him is to have access to any restaurants right down the street within 200 meters. In addition, he likes drinking coffee and working out in a gym. These two are equally important. However, David is allergic to many things so it would be better to avoid living in an area close to parks, flower stores, pet stores, or something similar. One more thing, "
+    "David doesn't like to cook because he hates the cooking smell inside the house, so the most important thing for him is to have access to any restaurants right down the street within 200 meters. In addition, he likes drinking coffee and working out in a gym. These two are equally important. However, David is allergic to many things so it would be better to avoid living in an area close to parks, flower stores, pet stores, or something similar. "
    ],
    "cell_type": "markdown",
    "metadata": {}
